--- a/install-pcf/aws/pipeline.yml
+++ b/install-pcf/aws/pipeline.yml
@@ -1,3 +1,4 @@
+
 resource_types:
 - name: pivnet
   type: docker-image
@@ -28,7 +29,7 @@ resources:
 - name: pcf-pipelines
   type: git
   source:
-    uri: git@github.com:pivotal-cf/pcf-pipelines.git
+    uri: git@github.com:jcorbin1201/pcf-pipelines.git
     branch: master
     private_key: {{git_private_key}}
 
@@ -136,6 +137,7 @@ jobs:
     file: pcf-pipelines/install-pcf/aws/tasks/prepare-rds/task.yml
     params:
       PEM: {{PEM}}
+      PEMPASSPHRASE: {{PEMPASSPHRASE}}
       OPSMAN_DOMAIN_OR_IP_ADDRESS: {{opsman_domain_or_ip_address}}
       DB_APP_USAGE_SERVICE_USERNAME: {{db_app_usage_service_username}}
       DB_APP_USAGE_SERVICE_PASSWORD: {{db_app_usage_service_password}}
