--- a/tasks/upload-product-and-stemcell/task.yml
+++ b/tasks/upload-product-and-stemcell/task.yml
@@ -5,8 +5,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: pcfnorm/rootfs
-
+    repository: pmatuska/pivnet-cli
+    tag: v2
 
 params:
   OPSMAN_DOMAIN_OR_IP_ADDRESS:
