--- a/tasks/configure-ert/task.yml
+++ b/tasks/configure-ert/task.yml
@@ -4,7 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: pcfnorm/rootfs
+    repository: pmatuska/pivnet-cli
+    tag: v2
 
 inputs:
 - name: pcf-pipelines
